--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~10.1.5",
+    "@angular/animations": "^10.1.5",
     "@angular/cdk": "^10.2.4",
     "@angular/common": "~10.1.5",
     "@angular/compiler": "~10.1.5",
@@ -29,6 +29,7 @@
     "jquery": "^3.5.1",
     "ng2-completer": "^9.0.1",
     "ng2-smart-table": "^1.7.0",
+    "ngx-toastr": "^13.1.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
